MOD: Refactored presentation to follow registry pattern
Refactored Presentation to follow pattern closer to
adapters/package_managers. The goal is to unify
patterns, so it is more manageable and easier
to comprehend. Additional goal is to lay groundwork
for the export command, so the implementation would
be a bit cleaner. Majority of the refactoring done
by Claude Code, but seems like it is pretty clean.

GH-3

Signed-off-by: Maksym Klymyshyn <klymyshyn@gmail.com>

--- a/src/ossiq/presentation/renderers/scan/html_templates/main.html
+++ b/src/ossiq/presentation/renderers/scan/html_templates/main.html
@@ -425,7 +425,7 @@
           class="underline hover:text-gray-900 dark:hover:text-gray-200 transition">
           Maksym Klymyshyn
         </a>,
-        <a href="" target="_blank" class="underline hover:text-gray-900 dark:hover:text-gray-200 transition">
+        <a href="https://github.com/ashulika" target="_blank" class="underline hover:text-gray-900 dark:hover:text-gray-200 transition">
           Oleksandr Shulika
         </a>
       </p>
