feat: introduced dependency tree parser
Implemented Dependency Tree abstract class and
implementations for UV and NPM (and NPM without lockfile).
Refactored Project service to work with new data structure.
Enhanced Depenency structure to work better with tree-like
structure.

WIP! Pylock is not finished as well as classic PIP is not
refactored yet.

Additionally, improved organization of pyproject.toml
in accordance with PEP735 and adjusted justfile respectively.

GH-18

Signed-off-by: Maksym Klymyshyn <klymyshyn@gmail.com>

--- a/src/ossiq/ui/renderers/scan/html_templates/main.html
+++ b/src/ossiq/ui/renderers/scan/html_templates/main.html
@@ -144,7 +144,7 @@
                  focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500">
                 <option>All</option>
                 <option value="False">Production</option>
-                <option value="True">Development</option>
+                <option value="True">Optional</option>
               </select>
             </div>
 
